#1252: Canviar literal "Format informe" a configuració de les consultes
https://github.com/GovernIB/helium/issues/1252

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1102,7 +1102,7 @@ expedient.tipus.consulta.form.titol=Títol
 expedient.tipus.consulta.form.descripcio=Descripció
 expedient.tipus.consulta.form.valorsPredefinits=Valors predefinits
 expedient.tipus.consulta.form.informe=Informe
-expedient.tipus.consulta.form.format=Format d'exportació
+expedient.tipus.consulta.form.format=Format d'informe
 expedient.tipus.consulta.form.exportarActiu=Exportar actiu?
 expedient.tipus.consulta.form.ocultarActiu=Desactivar?
 
