#1240 Nova funcionalitat Repro per a una tasca concreta
Task-Url: #1240

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -592,6 +592,7 @@ expedient.tipus.camp.llistat.agrupacio.boto.ordenar=Ordenar les agrupacions
 expedient.tipus.camp.form.titol.nou=Crear una nova variable
 expedient.tipus.camp.form.titol.modificar=Modificar la variable
 expedient.tipus.camp.form.camp.codi=Codi
+expedient.tipus.camp.form.camp.ambrepro=Amb repro
 expedient.tipus.camp.form.camp.tipus=Tipus
 expedient.tipus.camp.form.camp.etiqueta=Etiqueta
 expedient.tipus.camp.form.camp.observacions=Observacions
