--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -124,6 +124,7 @@ expedient.document.adjuntat=Adjuntat
 expedient.document.data=Data 
 expedient.document.pipella.general=General
 expedient.document.pipella.nti=Metadades NTI
+expedient.document.info.etiqueta.notificat=NOT
 
 expedient.tramitacio.massiva=Tramitació massiva
 expedient.tramitacio.massiva.header.nom=Nom tramitació
