#1248: Error de permisos actualitzant expedients després de desplegar
Task-Url: #1248

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1313,6 +1313,7 @@ definicio.proces.actualitzar.error.jbpmKey=No hi ha cap definició de procés a l'
 
 definicio.proces.desplegar.validacio.arxiu.buit=No s'ha seleccionat cap arxiu o no conté cap informació
 definicio.proces.desplegar.validacio.error.lectura=Error llegint l'arxiu a importar
+definicio.proces.desplegar.validacio.permisos=No te permisos per realitzar aquesta acció
 
 tasca.llistat.titol=Consulta de tasques
 tasca.llistat.filtre.camp.titol=Títol
