#1280: Error migrant expedient a l'arxiu
Task-Url: #1280

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -590,6 +590,7 @@ info.accio.massiu.reassignat=S&#39;ha programat la reassignació de {0} tasca(que
 info.accio.massiu.reprendre=S&#39;ha programat l&#39;acció de reprendre tramitació de {0} expedient(s)
 info.accio.massiu.reprendre_expedient=S&#39;ha programat l'acció de desfer finalització de {0} expedient(s)
 info.accio.massiu.finalitzar_expedient=S&#39;ha programat l&#39;acció de finalitzar {0} expedient(s)
+info.accio.massiu.migrar_expedient=S&#39;ha programat l&#39;acció de migrar a l&#39;arxiu {0} expedient(s)
 info.expedient.desanulat = L'expedient s'ha activat correctament
 info.dada.creat=La dada s'ha creat correctament
 info.expedient.reindexat=L'expedient s&#39;ha reindexat correctament
