#1217: Falta la funcionalitat de provar dominis externs
Task-Url: #1217

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -897,6 +897,7 @@ expedient.tipus.domini.form.domini.contrasenya=Contrasenya
 expedient.tipus.domini.form.domini.dades.sql=Dades connexió SQL
 expedient.tipus.domini.form.domini.datasource=JNDI del datasource
 expedient.tipus.domini.form.domini.sql=SQL
+expedient.tipus.domini.form.provar=Provar Domini
 expedient.tipus.domini.tipus.CONSULTA_SQL=Consulta tipus SQL 
 expedient.tipus.domini.tipus.CONSULTA_WS=Consulta tipus WS
 expedient.tipus.domini.tipus.auth.NONE=None 
