--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -875,6 +875,7 @@ domini.llistat.confirm.esborra=Estau segur que voleu esborrar aquest domini?
 
 expedient.tipus.domini.tipus.sql=SQL
 expedient.tipus.domini.tipus.ws=WS
+expedient.tipus.domini.tipus.rest=REST
 expedient.tipus.domini.nou=Nou domini
 expedient.tipus.domini.form.titol.nou=Nou domini
 expedient.tipus.domini.form.titol.modificar=Modificar domini
@@ -900,6 +901,7 @@ expedient.tipus.domini.form.domini.sql=SQL
 expedient.tipus.domini.form.provar=Provar Domini
 expedient.tipus.domini.tipus.CONSULTA_SQL=Consulta tipus SQL 
 expedient.tipus.domini.tipus.CONSULTA_WS=Consulta tipus WS
+expedient.tipus.domini.tipus.CONSULTA_REST=Consulta tipus REST
 expedient.tipus.domini.tipus.auth.NONE=None 
 expedient.tipus.domini.tipus.auth.HTTP_BASIC=Http BASIC
 expedient.tipus.domini.tipus.auth.USERNAMETOKEN=USERNAMETOKEN 
