#1298: Restringir formats convertibles quan el tipus d'expedient
Task-Url: #1298

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -278,6 +278,8 @@ document.metadades.nti.tipo.firma=Tipus de firma
 document.metadades.nti.csv=CSV
 document.metadades.nti.defgen.csv=Normativa de generació del CSV
 
+document.validacio.conversible.error=L'arxiu ha de ser convertible a PDF
+
 expedient.dada.mostrar.ocultes=Mostrar ocultes
 expedient.dada.borrar.error=S'ha produït un error al intentar esborrar la dada de l'expedient
 expedient.dada.modificar.error=S'ha produït un error al intentar modificar la dada de l'expedient
