#1300: Error enumeracions valors amb mateix codi
Task-Url: #1300

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -852,8 +852,9 @@ expedient.tipus.enumeracio.valors.controller.error.obligatori=Aquest camp es obl
 expedient.tipus.enumeracio.valors.importar.eliminar=Eliminar valors anteriors?
 expedient.tipus.enumeracio.valors.importar.arxiu=Seleccionau arxiu
 expedient.tipus.enumeracio.valors.importar.arxiu.buid=Heu de seleccionar un arxiu del qual importar les dades.
-expedient.tipus.enumeracio.valors.importats=Els valor s'han importat correctament.
-expedient.tipus.enumeracio.valors.importats.error=S'ha produït un error durant la'importació dels valors.
+expedient.tipus.enumeracio.valors.importats=Els valor s''han importat correctament.
+expedient.tipus.enumeracio.valors.importats.error=S''ha produït un error durant la importació dels valors: {0}
+expedient.tipus.enumeracio.valors.importats.duplicat=El codi {0} ja existeix o està duplicat en la importació
 
 expedient.tipus.enumeracio.valors.exportats=Els valor s'han exportat correctament.
 expedient.tipus.enumeracio.valors.exportats.error=S'ha produït un error durant l'exportació dels valors.
