#1308: Propagació de handlers a versions anteriors
Task-Url: https://github.com/GovernIB/helium/issues/1308

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -402,6 +402,9 @@ expedient.tipus.info.accio.agrupar=Agrupar
 expedient.tipus.info.accio.desagrupar=Desagrupar
 expedient.tipus.info.permis.no=No disposa de permís per a modificar l'expedient
 
+expedient.info.propagar.handlers=Propagar handlers
+expedient.info.propagar.handlers.info=Propaga els handlers de les darreres versions de les definicions de procés del tipus d'expedient a les versions anteriors escollides
+
 expedient.tipus.form.titol.nou=Crear nou tipus d'expedient
 expedient.tipus.form.titol.modificar=Modificar tipus d'expedient
 expedient.tipus.form.camp.codi=Codi
@@ -1145,6 +1148,14 @@ expedient.tipus.consulta.params.controller.modificat=El paràmetre s'ha modificat
 expedient.tipus.consulta.params.controller.eliminar.success=El paràmetre s'ha elimitat correctament
 expedient.tipus.consulta.params.controller.eliminar.error=S'ha produït un error intentant eliminar el paràmetre
 
+expedient.tipus.propagar.handlers.form.titol=Propagació dels handlers pel tipus d''expedient "{0} - {1}"
+expedient.tipus.propagar.handlers.form.info=Seleccioni per cada definició de procés les versions anteriors a les que vol propagar els handlers de la darrera versió.
+expedient.tipus.propagar.handlers.form.propagar=Propagar
+expedient.tipus.propagar.handlers.confirmacio=S''han propagat correctament els handlers de la definició de procés "{0}" a {1} versions anteriors
+expedient.tipus.propagar.handlers.error=S'ha produit un error propagant els handlers de la definició de procés "{0}" a versions anteriors: {1}
+expedient.tipus.propagar.handlers.cap.seleccionat.error=Ha de seleccionar com a mínim una versió anterior per processar la propagació de handlers
+expedient.tipus.propagar.handlers.cap.versio.anterior=La definició de procés "{0}" no té cap versió anterior a la que propagar handlers
+
 definicio.proces.delete.success=La definició de procés {0} v.{1} s'ha esborrat correctament
 definicio.proces.delete.error=Error esborrant la definició de procés : {0}
 definicio.proces.delete.error.processos=La definició de procés {0} v.{1} no es pot esborrar perquè té {2} expedients relacionats
@@ -1257,6 +1268,7 @@ definicio.proces.tasca.controller.firma.eliminat=La firma s'ha eliminat correcta
 definico.proces.recurs.columna.nom=Nom
 definico.proces.recurs.columna.contingut=Contingut
 definico.proces.recurs.descarregar=Descarregar contingut
+definico.proces.recurs.descarregar.par=Descarregar .par
 
 
 definicio.proces.exportar.form.titol=Exportació de la definició de procés
