#1253: Notificar un document a través de la interfície de Helium
Task-Url: https://github.com/GovernIB/helium/issues/1253

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -90,6 +90,7 @@ expedient.document.titol=Títol
 expedient.document.arxiu=Arxiu
 expedient.document.data=Data
 expedient.document.modificar=Modificar document
+expedient.document.notificar=Notificar document
 expedient.document.descarregar=Descarregar document
 expedient.document.adjunt=Document adjunt
 expedient.document.document=Document
@@ -630,6 +631,7 @@ info.document.adjuntats=Els documents s'han adjuntat correctament
 info.doc.proces.esborrat=El document ha estat esborrat del procés
 info.signatura.esborrat=La signatura s'ha esborrat correctament
 
+info.document.notificat=El document s'ha notificat correctament
 info.document.guardat=El document s'ha guardat correctament
 info.document.massiu.guardat=S&#39;ha programat la modificació del document a {0} expedient(s)
 info.document.guardats=Els documents s'ha guardat correctament
@@ -762,6 +764,7 @@ comuns.membres=Membres
 comuns.modificar=Modificar
 comuns.modificar.valor=nou valor
 comuns.modificar_info=Modificar informació
+comuns.notificar=Notificar
 comuns.multiple=Múltiple
 comuns.no=No
 comuns.nom=Nom
