--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -57,6 +57,42 @@ entorn.controller.modificat=L'entorn s'ha modificat correctament
 entorn.controller.esborrat=L'entorn s'ha esborrat correctament
 entorn.controller.permis.actualitzat=S'ha actualitzat el permis per a l'entorn
 
+
+interessat.llistat.accio.nou=Nou interessat
+interessat.llistat.titol=Interessat
+interessat.llistat.columna.codi=Codi
+interessat.llistat.columna.nom=Nom
+interessat.llistat.columna.nif=Nif
+interessat.llistat.columna.llinatge1=Llinatge1
+interessat.llistat.columna.llinatge2=Llinatge2
+interessat.llistat.columna.tipus=Tipus
+interessat.llistat.columna.email=Email
+interessat.llistat.columna.telefon=Telefon
+interessat.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquest interessat?
+
+interessat.controller.creat=L'interessat s'ha creat correctament
+interessat.controller.modificat=L'interessat s'ha modificat correctament
+interessat.controller.esborrat=L'interessat s'ha esborrat correctament
+
+interessat.llistat.titol=Interessat
+interessat.form.titol.nou=Crear interessat
+interessat.form.titol.modificar=Modificar interessat
+
+interessat.form.camp.codi=Codi
+interessat.form.camp.nom=Nom
+interessat.form.camp.nif=Nif
+interessat.form.camp.llinatge1=Llinatge1
+interessat.form.camp.llinatge2=Llinatge2
+interessat.form.camp.tipus=Tipus
+interessat.form.camp.email=Email
+interessat.form.camp.telefon=Telefon
+
+
+interessat.validacio.codi.repetit=Aquest codi ja existeix
+
+
+
+
 alerta.llistat.marcar_com_llegida=Marcar llegida
 alerta.llistat.marcar_no_llegida=Desmarcar llegida
 
@@ -126,6 +162,10 @@ expedient.document.pipella.general=General
 expedient.document.pipella.nti=Metadades NTI
 expedient.document.info.etiqueta.notificat=NOT
 
+expedient.document.notificar.form.camp.interessats.variable=Interessats
+expedient.document.notificar.form.camp.interessats.placeholder=Escolliu els interessats
+expedient.document.notificar.form.camp.concepte=Concepte
+
 expedient.tramitacio.massiva=Tramitació massiva
 expedient.tramitacio.massiva.header.nom=Nom tramitació
 expedient.tramitacio.massiva.header.execucio=Execució
@@ -159,6 +199,7 @@ expedient.info.alertes=Alertes
 expedient.info.alertes.text=Aquest expedient té alertes. 
 expedient.info.alertes.complement= pendents de llegir.
 expedient.info.etiqueta.nti=NTI
+expedient.info.etiqueta.notificacions=Notificacions
 expedient.info.etiqueta.arxiu=Arxiu
 expedient.info.camp.numero=Número
 expedient.info.camp.titol=Títol
@@ -188,6 +229,7 @@ expedient.info.pipella.tokens=Tokens
 expedient.info.pipella.accions=Accions
 expedient.info.pipella.dades=Dades
 expedient.info.pipella.documents=Documents
+expedient.info.pipella.interessats=Interessats
 expedient.info.pipella.terminis=Terminis
 expedient.info.pipella.notificacions=Notif.Telem.
 expedient.info.pipella.notificacions=Notificacions
