#1304 Alta de documents adjunts firmats
Task url: https://github.com/GovernIB/helium/issues/1304

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -162,6 +162,11 @@ expedient.document.pipella.general=General
 expedient.document.pipella.nti=Metadades NTI
 expedient.document.info.etiqueta.notificat=NOT
 
+expedient.document.form.camp.arxiu=Arxiu
+expedient.document.form.camp.amb.firma=Arxiu amb firma?
+expedient.document.form.camp.tipus.firma=Tipus de firma
+expedient.document.form.camp.firma=Arxiu amb la firma
+
 expedient.document.notificar.form.camp.interessats.variable=Interessats
 expedient.document.notificar.form.camp.interessats.placeholder=Escolliu els interessats
 expedient.document.notificar.form.camp.concepte=Concepte
@@ -320,7 +325,7 @@ document.metadades.nti.tipo.firma=Tipus de firma
 document.metadades.nti.csv=CSV
 document.metadades.nti.defgen.csv=Normativa de generació del CSV
 
-document.validacio.conversible.error=L'arxiu ha de ser convertible a PDF
+document.validacio.conversible.error=L'arxiu ha de ser convertible a PDF per evitar problemes amb l'Arxiu
 
 expedient.dada.mostrar.ocultes=Mostrar ocultes
 expedient.dada.borrar.error=S'ha produït un error al intentar esborrar la dada de l'expedient
@@ -1491,6 +1496,10 @@ enum.no=No
 enum.si.only=Només anul·lats
 enum.null =  
 
+enum.document.tipus.firma.ADJUNT=Adjunta
+enum.document.tipus.firma.SEPARAT=Separada
+
+
 comu.estat.iniciat=Iniciat
 comu.estat.finalitzat=Finalitzat
 comu.filtre.filtrar=Filtrar
@@ -1510,6 +1519,7 @@ comu.boto.esborrar=Esborrar
 comu.boto.tornar=Tornar
 comu.boto.importar.dades=Importar dades
 comu.boto.exportar.dades=Exportar dades
+comu.boto.descarregar=Descarregar
 comu.tots=Tots
 comu.totes=Totes
 comu.arxiu=Arxiu
