--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -239,6 +239,7 @@ error.especificar.document=S'ha d'especificar un document
 error.especificar.data=S'ha d'especificar la data
 error.extensio.document=L'extensió d'aquest document no està permesa
 error.extensio.document.permesa=L'extensió d'aquest document no està permesa. Només es permeten:
+error.especificar.document.firma=S'ha d'especificar un document de firma si es marca la firma com un arxiu separat
 
 error.executar.accio=No s'ha pogut executar l'acció
 error.executar.accio.camp=No s'ha pogut executar l'acció "{0}" del camp "{1}" per l'expedient amb ID={2}
