--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -633,6 +633,7 @@ info.signatura.esborrat=La signatura s'ha esborrat correctament
 
 info.document.notificat=El document s'ha notificat correctament
 info.document.guardat=El document s'ha guardat correctament
+info.document.guardat.error=S''ha produit un error guardant el document: {0}
 info.document.massiu.guardat=S&#39;ha programat la modificació del document a {0} expedient(s)
 info.document.guardats=Els documents s'ha guardat correctament
 info.document.massiu.generar=S&#39;ha programat la generació del document a {0} expedient(s)
