#1293: Canviar a la nova interfície de NOTIB
Task-Url: https://github.com/GovernIB/helium/issues/1293

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -86,11 +86,66 @@ interessat.form.camp.llinatge2=Llinatge2
 interessat.form.camp.tipus=Tipus
 interessat.form.camp.email=Email
 interessat.form.camp.telefon=Telefon
+interessat.form.camp.tipus=Tipus d'interessat
 
+interessat.tipus.enum.ADMINISTRACIO=Administració
+interessat.tipus.enum.FISICA=Fisica
+interessat.tipus.enum.JURIDICA=Juridica
 
 interessat.validacio.codi.repetit=Aquest codi ja existeix
+interessat.validacio.llinatge.obligatori=Si el tipus de persona és física llavors el llinatge es obligatori
+
+notifica.servei.tipus.enum.NORMAL=Normal
+notifica.servei.tipus.enum.URGENT=Urgent
+
+notifica.entregaPostal.tipus.enum.NACIONAL=Nacional
+notifica.entregaPostal.enum.ESTRANGER=Estanger
+notifica.entregaPostal.enum.APARTAT_CORREUS=Apartat correus
+notifica.entregaPostal.enum.SENSE_NORMALITZAR=Sense normalitzar
 
 
+notifica.entregaPostal.via.tipus.enum.ALAMEDA=Alameda
+notifica.entregaPostal.via.tipus.enum.CALLE=Calle
+notifica.entregaPostal.via.tipus.enum.CAMINO=Camino
+notifica.entregaPostal.via.tipus.enum.CARRER=Carrer
+notifica.entregaPostal.via.tipus.enum.CARRETERA=Carretera
+notifica.entregaPostal.via.tipus.enum.GLORIETA=Glorieta
+notifica.entregaPostal.via.tipus.enum.KALEA=Kalea
+notifica.entregaPostal.via.tipus.enum.PASAJE=Pasaje
+notifica.entregaPostal.via.tipus.enum.PASEO=Paseo
+notifica.entregaPostal.via.tipus.enum.PLAÇA=PlaÇa
+notifica.entregaPostal.via.tipus.enum.PLAZA=Plaza
+notifica.entregaPostal.via.tipus.enum.RAMBLA=Rambla
+notifica.entregaPostal.via.tipus.enum.RONDA=Ronda
+notifica.entregaPostal.via.tipus.enum.RUA=Rua
+notifica.entregaPostal.via.tipus.enum.SECTOR=Sector
+notifica.entregaPostal.via.tipus.enum.TRAVESIA=Travesia
+notifica.entregaPostal.via.tipus.enum.URBANIZACION=Urbanizacion
+notifica.entregaPostal.via.tipus.enum.AVENIDA=Avenida
+notifica.entregaPostal.via.tipus.enum.AVINGUDA=Avinguda
+notifica.entregaPostal.via.tipus.enum.BARRIO=Barrio
+notifica.entregaPostal.via.tipus.enum.CALLEJA=Calleja
+notifica.entregaPostal.via.tipus.enum.CAMI=Cami
+notifica.entregaPostal.via.tipus.enum.CAMPO=Campo
+notifica.entregaPostal.via.tipus.enum.CARRERA=Carrera
+notifica.entregaPostal.via.tipus.enum.CUESTA=Cuesta
+notifica.entregaPostal.via.tipus.enum.EDIFICIO=Edificio
+notifica.entregaPostal.via.tipus.enum.ENPARANTZA=Enparantza
+notifica.entregaPostal.via.tipus.enum.ESTRADA=Estrada
+notifica.entregaPostal.via.tipus.enum.JARDINES=Jardines
+notifica.entregaPostal.via.tipus.enum.JARDINS=Jardins
+notifica.entregaPostal.via.tipus.enum.PARQUE=Parque
+notifica.entregaPostal.via.tipus.enum.PASSEIG=Passeig
+notifica.entregaPostal.via.tipus.enum.PRAZA=Praza
+notifica.entregaPostal.via.tipus.enum.PLAZUELA=Plazuela
+notifica.entregaPostal.via.tipus.enum.PLACETA=Placeta
+notifica.entregaPostal.via.tipus.enum.POBLADO=Poblado
+notifica.entregaPostal.via.tipus.enum.VIA=Via
+notifica.entregaPostal.via.tipus.enum.TRAVESSERA=Travessera
+notifica.entregaPostal.via.tipus.enum.PASSATGE=Passatge
+notifica.entregaPostal.via.tipus.enum.BULEVAR=Bulevar
+notifica.entregaPostal.via.tipus.enum.POLIGONO=Poligono
+notifica.entregaPostal.via.tipus.enum.OTROS=Otros
 
 
 alerta.llistat.marcar_com_llegida=Marcar llegida
@@ -165,6 +220,32 @@ expedient.document.info.etiqueta.notificat=NOT
 expedient.document.notificar.form.camp.interessats.variable=Interessats
 expedient.document.notificar.form.camp.interessats.placeholder=Escolliu els interessats
 expedient.document.notificar.form.camp.concepte=Concepte
+expedient.document.notificar.form.camp.grupCodi=Grup codi
+expedient.document.notificar.form.camp.serveiTipus=Servei tipus
+expedient.document.notificar.form.camp.entregaPostalActiva=Entrega postal activa
+expedient.document.notificar.form.camp.entregaPostalTipus=Tipus
+expedient.document.notificar.form.camp.entregaPostalViaTipus=Via tipus
+expedient.document.notificar.form.camp.entregaPostalViaNom=Via nom
+expedient.document.notificar.form.camp.entregaPostalNumeroCasa=Numero casa
+expedient.document.notificar.form.camp.entregaPostalNumeroQualificador=Numero qualificador
+expedient.document.notificar.form.camp.entregaPostalPuntKm=Punt Km
+expedient.document.notificar.form.camp.entregaPostalApartatCorreus=Apartat Correus
+expedient.document.notificar.form.camp.entregaPostalPortal=Portal
+expedient.document.notificar.form.camp.entregaPostalEscala=Escala
+expedient.document.notificar.form.camp.entregaPostalPlanta=Planta
+expedient.document.notificar.form.camp.entregaPostalPorta=Porta
+expedient.document.notificar.form.camp.entregaPostalBloc=Bloc
+expedient.document.notificar.form.camp.entregaPostalComplement=Complement
+expedient.document.notificar.form.camp.entregaPostalCodiPostal=Codi postal
+expedient.document.notificar.form.camp.entregaPostalPoblacio=Poblacio
+expedient.document.notificar.form.camp.entregaPostalMunicipiCodi=Municipi codi
+expedient.document.notificar.form.camp.entregaPostalProvinciaCodi=Provincia codi
+expedient.document.notificar.form.camp.entregaPostalPaisCodi=Pais Codi
+expedient.document.notificar.form.camp.entregaPostalLinea1=Linea1
+expedient.document.notificar.form.camp.entregaPostalLinea2=Linea2
+expedient.document.notificar.form.camp.entregaPostalCie=Cie
+expedient.document.notificar.form.camp.entregaPostalFormatSobre=Format sobre
+expedient.document.notificar.form.camp.entregaPostalFormatFulla=Format fulla
 
 expedient.tramitacio.massiva=Tramitació massiva
 expedient.tramitacio.massiva.header.nom=Nom tramitació
@@ -1490,6 +1571,9 @@ enum.si=Sí
 enum.no=No
 enum.si.only=Només anul·lats
 enum.null =  
+
+
+
 
 comu.estat.iniciat=Iniciat
 comu.estat.finalitzat=Finalitzat
