--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -633,6 +633,7 @@ info.doc.proces.esborrat=El document ha estat esborrat del procés
 info.signatura.esborrat=La signatura s'ha esborrat correctament
 
 info.document.notificat=El document s'ha notificat correctament
+info.document.notificar.error=S''ha produït un error notificant el document: {0}
 info.document.guardat=El document s'ha guardat correctament
 info.document.guardat.error=S''ha produit un error guardant el document: {0}
 info.document.massiu.guardat=S&#39;ha programat la modificació del document a {0} expedient(s)
