--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -73,6 +73,7 @@ interessat.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquest in
 interessat.controller.creat=L'interessat s'ha creat correctament
 interessat.controller.modificat=L'interessat s'ha modificat correctament
 interessat.controller.esborrat=L'interessat s'ha esborrat correctament
+interessat.controller.esborrar.error=Error esborrant l''interessat: {0}
 
 interessat.llistat.titol=Interessat
 interessat.form.titol.nou=Crear interessat
@@ -326,6 +327,7 @@ expedient.info.permis.no=No disposa de permís per a modificar l'expedient
 expedient.info.token.activat=El token s'ha activat correctament
 expedient.info.token.desactivat=El token s'ha desactivat correctament
 expedient.info.validacio.estat.finalitzat=No es pot deixar buit l'estat d'un expedient amb data de finalització. Si vol pot desfinalitzar l'expedient
+expedient.info.error.consulta.arxiu=Error consultant la informació de l''expedient: {0}
 
 expedient.metadades.nti.titol.nti=Metadades NTI
 expedient.metadades.nti.titol.arxiu=Metadades NTI i informació de l'arxiu
@@ -406,7 +408,8 @@ document.metadades.nti.tipo.firma=Tipus de firma
 document.metadades.nti.csv=CSV
 document.metadades.nti.defgen.csv=Normativa de generació del CSV
 
-document.validacio.conversible.error=L'arxiu ha de ser convertible a PDF per evitar problemes amb l'Arxiu
+document.validacio.convertible.error=L'arxiu ha de ser convertible a PDF per evitar problemes amb l'Arxiu
+document.validacio.codiCustodia.error=Per poder guardar la firma a custòdia és necessari un codi de custòdia associat al document
 
 expedient.dada.mostrar.ocultes=Mostrar ocultes
 expedient.dada.borrar.error=S'ha produït un error al intentar esborrar la dada de l'expedient
@@ -469,6 +472,7 @@ expedient.tasca.accio.tramitar=Tramitar
 expedient.tasca.accio.delegar=Delegar
 expedient.tasca.accio.agafar=Agafar
 expedient.tasca.accio.reassignar=Reassignar
+expedient.tasca.accio.reassignar.errror=No s''ha pogut reassignar la tasca {0}: {1}
 expedient.tasca.accio.suspendre=Suspendre
 expedient.tasca.accio.reprendre=Reprendre
 expedient.tasca.accio.cancelar=Cancel·lar
@@ -1033,6 +1037,8 @@ expedient.tipus.domini.form.domini.dades.sql=Dades connexió SQL
 expedient.tipus.domini.form.domini.datasource=JNDI del datasource
 expedient.tipus.domini.form.domini.sql=SQL
 expedient.tipus.domini.form.provar=Provar Domini
+expedient.tipus.domini.form.parametres=Paràmetres
+expedient.tipus.domini.form.parametres.afegir=Afegir un nou paràmetre a la consulta
 expedient.tipus.domini.tipus.CONSULTA_SQL=Consulta tipus SQL 
 expedient.tipus.domini.tipus.CONSULTA_WS=Consulta tipus WS
 expedient.tipus.domini.tipus.CONSULTA_REST=Consulta tipus REST
@@ -1715,10 +1721,9 @@ document.controller.firma.passarela.inici.error=S''ha produït un error inciant l
 document.controller.firma.passarela.final.cancel=La firma del document ha estat cancel·lada
 document.controller.firma.passarela.final.ok=La firma del document ha finalitzat correctament
 document.controller.firma.passarela.final.ok.nofile=La firma del document ha finalitzat correctament però no ha retornat cap document
-document.controller.firma.passarela.final.ok.statusnok=La firma del document ha finalitzat correctament però l'estat del document no és l'esperat
-document.controller.firma.passarela.final.ok.statuserr=La firma del document ha finalitzat correctament però l'estat del document no és l'esperat
-document.controller.firma.passarela.final.error=La firma del document ha produit el seguent error: {0}
-document.controller.firma.passarela.final.error.validacio=La firma del document ha produit un error al validar i custodiar: 
+document.controller.firma.passarela.final.ok.statuserr=La firma del document ha finalitzat correctament però l''estat del document no és l''esperat: {0} - {1}
+document.controller.firma.passarela.final.error=La firma del document ha produit el seguent error: {0} {1}
+document.controller.firma.passarela.final.error.validacio=La firma del document ha produit un error al validar i custodiar: {0} 
 document.controller.firma.passarela.final.cancel=La firma del document ha estat cancel·lada
 document.controller.firma.passarela.final.desconegut=La firma del document ha finalitzat amb estat desconegut
 document.controller.firma.servidor.default.message=Firma per migració d'expedient finalitzat
