#1312 Corregir aspectes detectats en la revisió amb l'Arxiu
Task url: https://github.com/GovernIB/helium/issues/1312

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -138,6 +138,9 @@ error.cercar.entorns=Error cercant entorns actius
 error.esborrar.enum=No s'ha pogut esborrar l'enumeració
 
 error.esborrar.expedient=No s'ha pogut esborrar l'expedient
+error.esborrant.expedient=Error esborrant l''expedient: {0}
+error.desfinalitzant.expedient=Error desfinalitzant l''expedient: {0}
+error.consultant.informacio.expedient=Error consultant la informació de l'expedient: {0}
 error.anular.expedient=No s'ha pogut anul·lar l'expedient
 error.permisos.esborrar.expedient=No té permisos per esborrar aquest expedient
 error.permisos.consultar.expedient=No té permisos per consultar aquest expedient
