--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -580,6 +580,7 @@ info.enum.valors.importats=Els valors s'han importat correctament
 info.expedient.esborrat=L'expedient s'ha esborrat correctament
 info.expedient.anulat=L'expedient s'ha anul·lat correctament
 info.expedient.cancelat=L'expedient s'ha cancel·lat correctament
+info.expedient.desfinalitzat=L'expedient s'ha desfinalitzat correctament
 info.accio.executat=L'acció s'ha executat correctament
 info.accio.executat.nprimers=L&#39;acció s&#39;ha executat correctament en els primers {0} expedients
 info.accio.executades=Les accions s'han executat correctament
