--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -728,7 +728,7 @@ expedient.tipus.camp.llistat.accio.campsRegistre=Camps
 expedient.tipus.camp.llistat.accio.nova=Nova variable
 expedient.tipus.camp.llistat.accio.modificar=Modificar
 expedient.tipus.camp.llistat.accio.esborrar=Esborrar
-expedient.tipus.camp.llistat.accio.esborrar.error=S'ha produït un error al intentar esborrar la variable del tipus d'expedient
+expedient.tipus.camp.llistat.accio.esborrar.error=S''ha produït un error al intentar esborrar la variable del tipus d''expedient: {0}
 expedient.tipus.camp.llistat.accio.esborrar.correcte=La variable s'ha esborrat correctament
 expedient.tipus.camp.llistat.accio.esborrar.validacio.tasca=La variable pertany a les tasques [{0}] i no es pot esborrar
 expedient.tipus.camp.llistat.accio.esborrar.validacio.tasca.definicions=La variable pertany a les tasques [{0}] de les defincions de procés [{1}] i no es pot esborrar
