#1321 Proves validació versió 3.2.107_rc_1 herència DES
Task url: https://github.com/GovernIB/helium/issues/1321

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -654,6 +654,7 @@ exportar.validacio.tasca.variable.expedientTipus=La tasca "{0}" necessita la var
 exportar.validacio.tasca.document=La tasca "{0}" necessita el document "{1}"
 exportar.validacio.tasca.document.expedientTipus=La tasca "{0}" necessita el document "{1}" definida dins del tipus d''expedient
 exportar.validacio.tasca.firma=La tasca "{0}" necessita el document "{1}" per les signatures
+exportar.validacio.tasca.no.trobada=No s''ha trobat la tasca "{0}" en la definició de procés "{1}" destí
 exportar.validacio.tasca.firma.expedientTipus=La tasca "{0}" necessita el document "{1}" definida dins del tipus d''expedient per a una signatura
 exportar.validacio.definicio.inicial=La definició de procés "{0}" està configurada com a inicial en el tipus d''expedient
 exportar.validacio.definicio.deploy.error=No s'ha pogut deplegar correctament la definició de procés
@@ -731,7 +732,6 @@ expedient.tipus.camp.llistat.accio.esborrar=Esborrar
 expedient.tipus.camp.llistat.accio.esborrar.error=S''ha produït un error al intentar esborrar la variable del tipus d''expedient: {0}
 expedient.tipus.camp.llistat.accio.esborrar.correcte=La variable s'ha esborrat correctament
 expedient.tipus.camp.llistat.accio.esborrar.validacio.tasca=La variable pertany a les tasques [{0}] i no es pot esborrar
-expedient.tipus.camp.llistat.accio.esborrar.validacio.tasca.definicions=La variable pertany a les tasques [{0}] de les defincions de procés [{1}] i no es pot esborrar
 expedient.tipus.camp.llistat.accio.esborrar.validacio.consulta=La variable pertany a les consultes [{0}] i no es pot esborrar
 expedient.tipus.camp.llistat.accio.esborrar.validacio.registre=La variable pertany als registres [{0}] i no es pot esborrar
 
