#1322 Correccions errors validació versió 3.2.106 entorn PRE
Task url: https://github.com/GovernIB/helium/issues/1322

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -408,7 +408,7 @@ document.metadades.nti.tipo.firma=Tipus de firma
 document.metadades.nti.csv=CSV
 document.metadades.nti.defgen.csv=Normativa de generació del CSV
 
-document.validacio.convertible.error=L'arxiu ha de ser convertible a PDF per evitar problemes amb l'Arxiu
+document.validacio.convertible.error=L''arxiu ha de ser convertible a PDF per evitar problemes amb l''Arxiu
 document.validacio.codiCustodia.error=Per poder guardar la firma a custòdia és necessari un codi de custòdia associat al document
 
 expedient.dada.mostrar.ocultes=Mostrar ocultes
