#1336 Proves i correccions d'Helium v. 3.2.107
- Opció per canviar les tasques quan s'incorpori informació d'una
definició de procés cap al tipus d'expedient.

Tasc url: https://github.com/GovernIB/helium/issues/1336

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -880,6 +880,9 @@ expedient.tipus.definicioProces.incorporar.titol=Incorporació de la informació d
 expedient.tipus.definicioProces.incorporar.versio=Versió de la definició de procés
 expedient.tipus.definicioProces.incorporar.versio.placeholder=<< Darrera versió >>
 expedient.tipus.definicioProces.incorporar.sobreescriure=Sobreescriure informació amb el mateix codi
+expedient.tipus.definicioProces.incorporar.sobreescriure.info=Indica si s'han de sobreescriure les variables definides a nivell de tipus d'expedient en el cas que ja existeixin
+expedient.tipus.definicioProces.incorporar.tasques=Canviar camps, documents i firmes de tasques
+expedient.tipus.definicioProces.incorporar.tasques.info=Indica si s'han de modificar les variables, documents i firmes de les tasques de la versió de la definició de procés per a que es relacionin amb les variables definides a nivell de tipus d'expedient. Només és possible quan la definició de procés pertany al tipus d'expedient.
 expedient.tipus.definicioProces.incorporar.accio.incorporar=Incorporar informació
 
 ### MANTENIMENT DOCUMENTS DEL TIPUS D'EXPEDIENT ###
