#1335 Helium com a backoffice de Distribucio
- Configuració del tipus d'expedient
- Helium com a backoffice amb client WS
- Llistat anotacions pendents

Tasc url: https://github.com/GovernIB/helium/issues/1335

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -166,7 +166,7 @@ error.llistat.pendent.signar=No s'ha pogut consultar la llista de fitxers de l'p
 
 error.modificar.dades.exp=No s'han pogut modificar les dades de l'expedient
 
-error.executar.script=No s'ha pogut executar L'script
+error.executar.script=No s'ha pogut executar l'script
 error.executar.script.permis.no=No disposa de permisos per a executar scripts
 error.modificar.variable=No s'ha pogut modificar la variable
 error.expedient.ja.anulat=Aquest expedient ja està anulat
