--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -3,6 +3,7 @@ decorator.rol.admin=Administrador
 decorator.rol.disseny=Dissenyador
 decorator.rol.usuari=Usuari
 decorator.menu.expedients=Expedients
+decorator.menu.anotacions=Anotacions
 decorator.menu.tasques=Tasques
 decorator.menu.informes=Informes
 decorator.menu.consultes=Consultes
@@ -544,6 +545,7 @@ expedient.tipus.pipelles.pipella.redireccions=Redireccions
 expedient.tipus.pipelles.pipella.consultes=Consultes
 expedient.tipus.pipelles.pipella.enumeracions=Enumeracions
 expedient.tipus.pipelles.pipella.integracio.sistra=Integració SISTRA
+expedient.tipus.pipelles.pipella.integracio.distribucio=Integració DISTRIBUCIO
 expedient.tipus.pipelles.pipella.integracio.forms=Integració forms
 expedient.tipus.pipelles.pipella.integracio.arxiu=Metadades NTI i arxiu
 expedient.tipus.pipelles.pipella.integracio.notib=Integració amb NOTIB
@@ -1214,6 +1216,13 @@ expedient.tipus.integracio.tramits.adjunts=Adunts
 expedient.tipus.integracio.tramits.tramitCodi=Identificador del tràmit
 expedient.tipus.integracio.tramits.notificacions.activar=Activar notificacions
 
+expedient.tipus.integracio.distribucio.controller.guardat=Els canvis s'han guardat correctament
+expedient.tipus.integracio.distribucio.validacio = Errors de validació
+expedient.tipus.integracio.distribucio.activar=Activar
+expedient.tipus.integracio.distribucio.codiProcediment=Codi procediment
+expedient.tipus.integracio.distribucio.validacio.codiProcediment.repetit=Ja existeix el tipus d''expedient "{0} - {1}" a l''entorn "{2} - {3}" actiu pel codi de procediment "{4}"
+
+
 expedient.tipus.integracio.notificacio.organCodi=Codi d'òrgan
 expedient.tipus.integracio.notificacio.oficinaCodi=Codi d'oficina
 expedient.tipus.integracio.notificacio.unitatAdministrativa=Unitat administrativa
@@ -1247,6 +1256,7 @@ expedient.tipus.metadades.nti.clasificacion=Codi SIA del procediment associat
 expedient.tipus.metadades.nti.serie.documental=Sèrie documental
 expedient.tipus.metadades.nti.controller.guardat=Els canvis s'han guardat correctament
 expedient.tipus.metadades.nti.arxiu.actiu=Integració amb arxiu activa
+expedient.tipus.metadades.nti.validacio = Errors de validació
 
 expedient.tipus.integracio.tramits.controller.guardat=Els canvis s'han guardat correctament
 expedient.tipus.integracio.tramits.validacio = Errors de validació
@@ -1661,6 +1671,13 @@ monitor.integracio.columna.tipus=Tipus
 monitor.integracio.columna.estat=Resultat
 monitor.integracio.columna.temps.resposta=Temps de resposta
 monitor.integracio.info.parametres=Paràmetres de la petició
+
+# Anotacions provinents de Distribucio
+anotacio.llistat.titol=Consulta d'anotacions
+anotacio.llistat.filtre.camp.extracte=Extracte
+anotacio.llistat.columna.extracte=Extracte
+anotacio.llistat.accio.consultar=Gestionar
+
 
 enum.tasca.etiqueta.grup=Tasca de grup
 enum.tasca.etiqueta.CA=Cancel·lada
